# ArchitecturePatterns

./: Dockerfile  README.md  ap.ipynb  pyproject.toml
domain_model/: model.py
