[tool.poetry]
name = "architecturepatterns"
version = "0.1.0"
description = ""
authors = ["Tipan Verella <tipan.verella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pylint = "^2.13.9"
mypy = "^0.950"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
